user story completion

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -9,17 +9,17 @@
 
 <div class="jumbotron text-center Aligner">
   <div class="container">
-    <h1>Url Shortener Service</h1>
+    <h1>Image Search Abstraction Layer</h1>
     <p>
-      Shorten a URL with /new/YOUR_URL_HERE.
-      <br />
-      Your link MUST contain the http:// or https:// component.
+      /api/latest/imagesearch/ to view the latest search requests on this application
       <br />
       <br />
-      A JSON object containing the original url and the shortened URL will be returned.
+      Perform an image search using /api/imagesearch/[YOURSEARCHTERM]
+      <br />
+      /api/imagesearch will take an optional offset perimeter
       <br />
       <br />
-      Future optimizations: check db for existing entry.
+      Happy searching!
     </p>
   </div>
 </div>
